--- a/.github/workflows/oidctest.yml
+++ b/.github/workflows/oidctest.yml
@@ -8,6 +8,7 @@ permissions:
 jobs: 
   Windows-latest:
       runs-on: windows-latest
+      environment: dev
       steps:
         - name: OIDC Login to Azure Public Cloud with AzPowershell (enableAzPSSession true)
           uses: azure/login@v1
